--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+footer {
+  width: 100%;
+  padding: 1rem;
+  margin: 0.5rem 1rem;
+  text-align: center;
+  transition: 200ms;
+}
